# n2o5

./: Cargo.toml  license  readme.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
cli/src/ninja/: convert.rs  mod.rs  model.rs  parse.rs  parser.rs  run.rs  tokenizer.rs
cli/tests/: parser_snapshot.rs
cli/tests/parser_snapshots/: depfile.ninja  depfile.snap  msvc.ninja  msvc.snap  var_expansion_1.ninja  var_expansion_1.snap  var_expansion_2.ninja  var_expansion_2.snap
crates/n2o4-heed/: Cargo.toml
crates/n2o4-heed/src/: codec.rs  lib.rs  rw.rs
crates/n2o5-heed/: Cargo.toml
crates/n2o5-heed/src/: lib.rs  rw.rs
crates/n2o5-redb/: Cargo.toml
crates/n2o5-redb/src/: codec.rs  lib.rs  rw.rs
examples/build_rs/: Cargo.toml  build.rs
examples/build_rs/src/: main.rs
src/: db.rs  exec.rs  graph.rs  lib.rs  progress.rs  shape.rs  world.rs
src/db/: dumb.rs  in_memory.rs  redb.rs
src/graph/: hash.rs
src/progress/: dumb.rs  fancy.rs  noop.rs
tests/: mock.rs  mock_tests.rs
tests/mock/: mod.rs
