[package]
name = "n2o5"
version = "0.1.0"
edition = "2024"

rust-version = "1.89"

[dependencies]
indexmap = "2.11.1"
petgraph = "0.8.2"
rayon = "1.11.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_bytes = "0.11.19"
smol_str = "0.3.2"
thiserror = "2.0.16"
tracing = "0.1.41"
twox-hash = "2.1.2"

# Dependencies related to default Redb backend
redb = { optional = true, version = "3.0.1" }
postcard = { optional = true, version = "1.1.3", features = ["use-std"] }

[features]
default = ["db-redb"]
db-redb = ["redb", "postcard"]

[workspace]
members = [".", "cli", "crates/n2o5-heed"]

[workspace.dependencies]
n2o5 = { path = "." }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
