[package]
name = "n2o5"
version = "0.1.0"
edition = "2024"

rust-version = "1.89"

[dependencies]
indexmap = "2.11.1"
petgraph = "0.8.2"
rayon = "1.11.0"
smol_str = "0.3.2"
thiserror = "2.0.16"
tracing = "0.1.41"
xxhash-rust = { version = "0.8.15", default-features = false, features = [
    "xxh3",
    "std",
] }
shlex = "1.3.0"


# Dependencies related to optional database backends
bincode = { workspace = true, optional = true }
serde = { version = "1.0.225", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.19", optional = true }

# Dependencies for a fancy progress bar
indicatif = { optional = true, version = "0.18.0" }

[features]
default = ["db-dumb", "progress-fancy", "progress-dumb"]

# Raw dep support
serde = ["dep:serde", "dep:serde_bytes"]
bincode = ["dep:bincode"]

# Fancy features
db-dumb = ["bincode"]
progress-fancy = ["indicatif"]
progress-dumb = []

[workspace]
members = [".", "cli", "crates/n2o5-heed", "crates/n2o5-redb", "examples/*"]

[workspace.dependencies]
n2o5 = { path = "." }
n2o5-redb = { path = "crates/n2o5-redb" }
bincode = "2.0.1"
postcard = { version = "1.1.3", features = ["use-std"] }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["trace"] }
