[package]
name = "n2o4-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "n2o4"
path = "src/main.rs"

[dependencies]
arcstr = "1.2.0"
clap = { version = "4.5.47", features = ["derive"] }
logos = "0.15.1"
n2o4.workspace = true
shlex = "1.3.0"
smallvec = { version = "1.15.1", features = ["union"] }
thiserror = "2.0.16"
