[package]
name = "n2o4-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "n2o4"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
arcstr = "1.2.0"
clap = { version = "4.5.47", features = ["derive"] }
elsa = "1.11.2"
indexmap = "2.11.4"
logos = "0.15.1"
n2o4.workspace = true
shlex = "1.3.0"
smallvec = { version = "1.15.1", features = ["union"] }
thiserror = "2.0.16"

[dev-dependencies]
expect-test = "1.5.1"
